examples/test/testpolicy11470.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11470
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key47: value27
      key15: value33
      key12: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value25
      podSelector:
        matchLabels:
          key41: value40
